--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - mysql_db:/var/lib/mysql
     networks:
       - mail
+    ports:
+      - "6033:3306"
     hostname: mysql
     container_name: mysql
 
