--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,20 @@ services:
     hostname: nginx
     container_name: nginx
 
+  opendkim:
+    image: instrumentisto/opendkim:2.10.3-alpine
+    volumes:
+      - opendkim:/etc/opendkim\
+    networks:
+      - mail
+    hostname: opendkim
+    container_name: mailserver_opendkim
+
+
 volumes:
   www:
   mysql_db:
+  opendkim:
 
 networks:
   mail:
